# IRCS

./: .clang-format  .gitignore  CMakeLists.txt  ircs.code-workspace
.github/workflows/: ircs.yml
include/: ircs.hpp
include/ircs/: ReferenceCounted.hpp  ReferencePointer.hpp
src/ircs/: ReferenceMutations.cpp
tests/: CMakeLists.txt  main.cpp
tests/ircs/: ReferenceCounterTests.cpp
